--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,9 @@
     ]
   },
   "scripts": {
-    "presta:api:install": "@php vendor/ibrostudio/prestashop-module-helper/cli api install --namespace=\\\\PrestaShop\\\\Module\\\\TrusttReviews\\\\",
-    "presta:make:api": "vendor/bin/presta make:api",
-    "presta:make:api-request": "vendor/bin/presta make:api-request",
     "analyse": "vendor/bin/phpstan --configuration=tests/phpstan/phpstan.neon analyse",
     "autoindex": "vendor/bin/autoindex prestashop:add:index ./",
+    "cli": "@php vendor/ibrostudio/prestashop-module-helper/cli \\\\PrestaShop\\\\Module\\\\TrusttReviews\\\\",
     "format": "vendor/bin/php-cs-fixer fix",
     "header-stamp": "vendor/bin/header-stamp --license=./.header-stamp-afl --exclude=node_modules,vendor"
   },
